tests/functional/lang/parse-fail-dup-attrs-7.err.exp
error: attribute 'x' already defined at /pwd/parse-fail-dup-attrs-7.nix:6:13
       at /pwd/parse-fail-dup-attrs-7.nix:7:13:
            6|     inherit x;
            7|     inherit x;
             |             ^
            8|   };
